Fixed the issue that when browsing with a mobile device tooltip will be covered

--- a/src/Styles/toast.scss
+++ b/src/Styles/toast.scss
@@ -17,7 +17,7 @@
     }
     
     &.success {
-      background-color: #1db954;
+      background-color:black;
       
       & p { color: #fff; font-size: larger;}
     }
